src/test/ui/stability-attribute/generics-default-stability.stderr
error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:16:13
   |
LL | impl Trait1<usize> for S {
   |             ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:20:13
   |
LL | impl Trait1<isize> for S {
   |             ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:24:13
   |
LL | impl Trait2<usize> for S {
   |             ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

warning: use of deprecated item 'unstable_generic_param::Struct4': test
  --> $DIR/generics-default-stability.rs:83:29
   |
LL |     let _: Struct4<isize> = Struct4 { field: 1 };
   |                             ^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: use of deprecated item 'unstable_generic_param::Struct4': test
  --> $DIR/generics-default-stability.rs:83:12
   |
LL |     let _: Struct4<isize> = Struct4 { field: 1 };
   |            ^^^^^^^^^^^^^^

warning: use of deprecated item 'unstable_generic_param::Struct4': test
  --> $DIR/generics-default-stability.rs:88:12
   |
LL |     let _: Struct4 = STRUCT4;
   |            ^^^^^^^

warning: use of deprecated item 'unstable_generic_param::Struct4': test
  --> $DIR/generics-default-stability.rs:89:12
   |
LL |     let _: Struct4<usize> = STRUCT4;
   |            ^^^^^^^^^^^^^^

warning: use of deprecated item 'unstable_generic_param::Struct4': test
  --> $DIR/generics-default-stability.rs:90:29
   |
LL |     let _: Struct4<isize> = Struct4 { field: 0 };
   |                             ^^^^^^^

warning: use of deprecated item 'unstable_generic_param::Struct4': test
  --> $DIR/generics-default-stability.rs:90:12
   |
LL |     let _: Struct4<isize> = Struct4 { field: 0 };
   |            ^^^^^^^^^^^^^^

warning: use of deprecated item 'unstable_generic_param::Struct5': test
  --> $DIR/generics-default-stability.rs:96:29
   |
LL |     let _: Struct5<isize> = Struct5 { field: 1 };
   |                             ^^^^^^^

warning: use of deprecated item 'unstable_generic_param::Struct5': test
  --> $DIR/generics-default-stability.rs:96:12
   |
LL |     let _: Struct5<isize> = Struct5 { field: 1 };
   |            ^^^^^^^^^^^^^^

warning: use of deprecated item 'unstable_generic_param::Struct5': test
  --> $DIR/generics-default-stability.rs:101:12
   |
LL |     let _: Struct5 = STRUCT5;
   |            ^^^^^^^

warning: use of deprecated item 'unstable_generic_param::Struct5': test
  --> $DIR/generics-default-stability.rs:102:12
   |
LL |     let _: Struct5<usize> = STRUCT5;
   |            ^^^^^^^^^^^^^^

warning: use of deprecated item 'unstable_generic_param::Struct5': test
  --> $DIR/generics-default-stability.rs:104:29
   |
LL |     let _: Struct5<isize> = Struct5 { field: 0 };
   |                             ^^^^^^^

warning: use of deprecated item 'unstable_generic_param::Struct5': test
  --> $DIR/generics-default-stability.rs:104:12
   |
LL |     let _: Struct5<isize> = Struct5 { field: 0 };
   |            ^^^^^^^^^^^^^^

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:35:20
   |
LL |     let _: Struct1<isize> = Struct1 { field: 1 };
   |                    ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:39:20
   |
LL |     let _: Struct1<usize> = STRUCT1;
   |                    ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:40:20
   |
LL |     let _: Struct1<isize> = Struct1 { field: 0 };
   |                    ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:69:27
   |
LL |     let _: Struct3<isize, usize> = STRUCT3;
   |                           ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:71:27
   |
LL |     let _: Struct3<isize, isize> = Struct3 { field1: 0, field2: 0 };
   |                           ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:72:27
   |
LL |     let _: Struct3<usize, usize> = Struct3 { field1: 0, field2: 0 };
   |                           ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:96:20
   |
LL |     let _: Struct5<isize> = Struct5 { field: 1 };
   |                    ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:102:20
   |
LL |     let _: Struct5<usize> = STRUCT5;
   |                    ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_default'
  --> $DIR/generics-default-stability.rs:104:20
   |
LL |     let _: Struct5<isize> = Struct5 { field: 0 };
   |                    ^^^^^
   |
   = help: add `#![feature(unstable_default)]` to the crate attributes to enable

warning: use of deprecated item 'unstable_generic_param::Struct4::field': test
  --> $DIR/generics-default-stability.rs:83:39
   |
LL |     let _: Struct4<isize> = Struct4 { field: 1 };
   |                                       ^^^^^^^^

warning: use of deprecated item 'unstable_generic_param::Struct4::field': test
  --> $DIR/generics-default-stability.rs:90:39
   |
LL |     let _: Struct4<isize> = Struct4 { field: 0 };
   |                                       ^^^^^^^^

warning: use of deprecated item 'unstable_generic_param::Struct5::field': test
  --> $DIR/generics-default-stability.rs:96:39
   |
LL |     let _: Struct5<isize> = Struct5 { field: 1 };
   |                                       ^^^^^^^^

warning: use of deprecated item 'unstable_generic_param::Struct5::field': test
  --> $DIR/generics-default-stability.rs:104:39
   |
LL |     let _: Struct5<isize> = Struct5 { field: 0 };
   |                                       ^^^^^^^^

error: aborting due to 12 previous errors; 16 warnings emitted

For more information about this error, try `rustc --explain E0658`.
